@@ -30,9 +30,6 @@ extern LONG     CMP_TICK;                       /* indicates to tick    */
 extern void cli(void);
 extern void sti(void);
 
-extern void hcli(void);
-extern void hsti(void);
-
 extern void far_bcha(void);
 extern void far_mcha(void);
 extern void aes_wheel(void);
